# google-adk-swarm

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  grapp.py  main.py  pyproject.toml  requirements.txt
agent/: agent.py  main.py  tools.py
agents/: config.py  custom_agent.py
agents/coordinator_agent/: agent.py
agents/custom_agent/: agent.py
agents/loop_agent/: agent.py
agents/multi_agent/: agent.py  agent_google_search.py  agent_gpt.py  guardrails.py  prompts.py  subagents.py  tools.py
agents/search_agent/: __init__.py  agent.py
agents/sequential_agent/: agent.py
agents/weather_agent/: __init__.py  agent.py  tools.py
api/: main.py
api/routes/: agent_router.py  default.py
data/: mock_kb.json  mock_knowledge_base.json
notebooks/: build_knowledge_base.ipynb  sandbox.ipynb
shared_libraries/: constants.py
support_agent/: agent.py  prompt.py
support_agent/guardrails/: block_keyword.py  block_paris_tool.py
support_agent/sub_agents/crawler/: agent.py  prompt.py
support_agent/sub_agents/knowledgeable/: agent.py  prompt.py  test_agent.py
support_agent/sub_agents/web_searcher/: agent.py  guardrails.py  prompt.py
support_agent/tools/: get_weather.py
tests/: conftest.py
tests/fixtures/: mock_data.py
tests/unit/: test_crawler_tools.py  test_guardrails.py  test_knowledgeable_tools.py  test_web_searcher_tools.py
