[project]
name = "swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.121.1",
    "google-adk>=1.18.0",
    "litellm>=1.79.3",
    "pillow>=10.0.0",
    "python-dotenv>=1.2.1",
    "selenium>=4.38.0",
    "uvicorn>=0.38.0",
]
